# spaceforge

./: .gitignore  LICENSE  README.md  pyproject.toml
arch_search_results/: arch_search.json
presets/: cielab.yaml  helmgen_h_v2.yaml  helmgen_v7b.yaml  helmgen_v7b_huerotdep.yaml  oklab.yaml
spaceforge/: __init__.py  api.py  architect.py  cli.py  engine.py
spaceforge/analysis/: __init__.py  ablation.py  cross_model.py  feasibility.py  pareto.py  root_cause.py  sensitivity.py
spaceforge/core/: __init__.py  constraints.py  inverse.py  pipeline.py
spaceforge/core/blocks/: __init__.py  blue_fix.py  chroma.py  cross_term.py  hue_rotation.py  l_correction.py  matrix.py  transfer.py
spaceforge/export/: __init__.py  checkpoint.py  colorbench_export.py  css.py  helmlab.py
spaceforge/history/: __init__.py  diff.py  regression.py  tracker.py
spaceforge/metrics/: __init__.py  registry.py
spaceforge/optimizer/: __init__.py  solver.py
spaceforge/references/: __init__.py
spaceforge/report/: __init__.py  html.py  terminal.py  visualize.py
tests/: conftest.py  test_blocks.py  test_edge_cases.py  test_inverse.py  test_metrics.py  test_pipeline.py
